syntax = "proto3";

package pb;

import "pb/common.proto";
import "pb/order.proto";
service AccountService {
    //初始化account
    rpc InitAccount (Account) returns (Void);
    //增加什么AccountItem
    rpc AddAccountItem (AccountItem) returns (Void);
    //order pay over Account handle
    rpc PayOverOrderAccountHandle (Order) returns (Void);
    //order complete account handle
    rpc OrderCompleteAccountHandle (Order) returns (Void);
    //handle after sale order
    rpc HandleAfterSaleOrder (Order) returns (NormalResp);
    //查找账户项列表
    rpc FindAccountItems (FindAccountitemReq) returns (FindAccountitemResp);
    //账户余额统计
    rpc AccountStatistic (Account) returns (AccountStatisticResp);
}
//账户
message Account{
    string id = 1;
    int64 type = 2;
    int64 balance = 3;
    int64 unsettled_balance = 4;
    string store_id = 5;
    int64 online_income = 6;
    int64 offline_income = 7;
    int64 expenses = 8;
    int64 create_at = 9;
    int64 update_at = 10;
}
//账户项
message AccountItem{
    string id = 1;
    int64 user_type = 2;
    string store_id = 3;
    string order_id = 4;
    string remark = 5;
    int64   item_type = 6;
    int64   item_fee = 7;
    int64   account_balance = 8;
    int64   create_at = 9;
    int64   update_at = 10;
}
//查找账户项列表提交model
message FindAccountitemReq{

    int64 type = 1;
    int64 start_at = 2;
    int64 end_at = 3;
    string store_id = 4;
    int64 page = 5;
    int64 size = 6;
}
//账户统计响应
message AccountStatisticResp{
    string code = 1;
    string message = 2;
    AccountStatisticModel data = 3;
}
//账户余额统计model
message AccountStatisticModel{
    int64 unsettled_balance = 1;
    int64 balance = 2;
}
//查找账户项列表提交model
message FindAccountitemResp{
    string code = 1;
    string message = 2;
    repeated AccountItem data = 3;
    int64 total_income = 4;
    int64 total_expense = 5;
    int64 total_count = 6;
}
